feat: add endpoint logout with redis implementation
